--- a/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
@@ -1,27 +1,101 @@
-<!DOCTYPE html> 
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Shopping List App</title>
-        <link rel="stylesheet" href="main.css">
-        <style>
-            [v-cloak] {
-              display:none;
-            }
-        </style> 
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="main.css">
+    <style>
+        [v-cloak] {
+          display:none;
+        }
+    </style> 
+</head>
+
+<h1>Harvest Report</h1>
+<p><FONT COLOR="GREY"> This page is a <i>mockup</i> of a simplfied Harvest Report</FONT></p>
+<div id="rHeader">
+    <input type="text" value="Title:" v-model="rHeader"/>
     <body>
-        <div id="rHeader">
-        <h1 v-cloak>{{ header }}</h1>
-        <input type="text" v-model="header">
-        </div>
+        <br>
+    <label for="crop">Crop:</label>
+    <select id="crop">
+        <option>Broccoli</option>
+        <option selected>Kale</option>
+        <option>Peas</option>
+      </select>
+    <br>
+    <label for="field">Field:</label>
+    <select id="field">
+        <option selected>All</option>
+        <option>Chuau-1</option>
+        <option>SQ7</option>
+      </select>
+    <br>
+    <label for="start">Start date:</label>
+    <input type="date" id="start" min="01-01-2014" value="05-05-2020" max="01-01-2022" />
+    <br>
+    <label for="end">End date:</label>
+    <input type="date" id="end" min="05-05-2020" value="05-15-2020" max="01-01-2022" />
+    <br>
+    <button type="submit">Generate Report</button>
+    
+    <hr style="width:33%;margin-left:0">
+    <div id="rHeader">
+    <h1>{{ rHeader }}</h1>
+     
     <script>
         var rHeader = new Vue({
             el: '#rHeader',
             data: {
-                header: 'My Sample Harvest Report'
-            }   
+                rHeader: 'My Sample Harvest Report'
+            } 
         });
     </script>
-    </body>
-</html>
+    </div>
+</div>
+
+
+
+
+
+</body>
+
+<body>
+<p><FONT COLOR="GREY"> Details:</FONT></p>
+<ul>
+    <li><b>Farm:</b> Sample Farm</li>
+    <li><b>User:</b> manager1</li>
+    <li><b>Language:</b> English</li>
+<br>
+    <li><b>Start:</b> 05/01/2018</li>
+    <li><b>End:</b> 05/01/2018</li>
+    <li><b>Crop:</b> Kale</li>
+</ul>
+<table>
+    <style>
+        table, th, td {
+          border: 1px solid black;
+          border-collapse: collapse;
+        }
+        </style>
+    <tr>
+      <th>Date</th>
+      <th>Area</th>
+      <th>Crop</th>
+      <th>Yield</th>
+      <th>Units</th>
+    </tr>
+    <tr>
+      <td>05/02/2018</td>
+      <td>Chuau-1</td>
+      <td>Kale</td>
+      <td>10</td>
+      <td>Bunches</td>
+    </tr>
+    <tr>
+      <td>05/05/2018</td>
+      <td>SQ7</td>
+      <td>Kale</td>
+      <td>7</td>
+      <td>Bunches</td>
+    </tr>
+</table>
+</body>
+
