--- a/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
+++ b/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
@@ -3,6 +3,31 @@
      <label for="title">Title:</label>
      <input type = "text" id = "title" name = "title" value ="" />
      <br>
+     <br>
+
+<label for="start">Start:</label>
+<input type="date" id="start" name="start" 
+     value="2020-05-05" min="2014-01-01" max="2022-01-01" />
+
+     <label for="end">End:</label>
+<input type="date" id="end" name="end" 
+     value="2020-05-05" min="2020-05-05" max="2022-01-01" />
+<br>
+<br>
+     <label for="crop">Crop:</label>
+     <select id="crop" name="crop">
+          <option>Broccoli</option>
+          <option selected>Kale</option>
+          <option>Peas</option>
+        </select>
+     <label for="area">Area:</label>
+     <select id="area" name="area">
+          <option>Chuau-1</option>
+          <option selected>All</option>
+          <option>SQ7</option>
+        </select>
+     <br>
+     <br>
      <button type="generate">Generate Report</button>
 <hr>
 <h1>My Sample Harvest Report</h1>
