--- a/farmdata2/farmdata2_modules/fd2_school/Vue1/vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/Vue1/vue1.html
@@ -14,6 +14,27 @@
                 <select name="area" id="area">
                     <option v-for="area in areas" :value="area">{{ area }}</option>
                 </select>
+                <h1 v-cloak>Harvest Report</h1>
+          <table>
+            <thead>
+              <tr>
+                <th>Date</th>
+                <th>Area</th>
+                <th>Crop</th>
+                <th>Yield</th>
+                <th>Units</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr v-for="log in harvestLogs"> <!--added new for harvestLogs-->
+                <td>{{ log.date }}</td>
+                <td>{{ log.area }}</td>
+                <td>{{ log.crop }}</td>
+                <td>{{ log.yield }}</td>
+                <td>{{ log.units }}</td>
+              </tr>
+            </tbody>
+          </table>
             </div>
             <script src="https://unpkg.com/vue@2"></script>
             <script>
@@ -26,6 +47,10 @@
                      selectedCrop: "kale",
                      crops: ["brocili", "kale", "peas"],
                      areas: ["all", "chuahu-1", "sq7"],
+                     harvestLogs: [
+                     {date: "2018-05-02", area:"sq7", crop:"kale", yield: 10, units:"Bunches"},
+                     {date: "2018-05-10", area:"chuahu-1", crop:"peas", yield: 10, units:"Bunches"},
+                    ],
                  }
                 })
             </script>
