--- a/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
@@ -1,41 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Vue1</title>
 </head>
 <body>
     <h1>Harvest Report</h1>
     <p>This page is a <i>mockup</i> of a simplified harvest report.</p>
-    <label for="title">Title:</label>
-    <input type="text" id="title" name="title"/>
-    <br>
-    <br>
-    <label for="start-date">Start:</label>
-    <input type="date" id="start-date" name="start-date"  value="2020-05-05" min="2014-01-01" max="2022-01-01" />
-    <label for="end-date">End:</label>
-    <input type="date" id="end-date" name="end-date" value="2020-05-15" min="2020-05-05" max="2022-01-01"/>
-    <br>
-    <br>
-    <label for="crop">Crop:</label>
-    <select id="crop" name="crop">
-        <option>Broccoli</option>
-        <option selected>Kale</option>
-        <option>Peas</option>
-    </select>
-    <label for="field">Area:</label>
-    <select id="field" name="field">
-        <option selected>All</option>
-        <option>Chuau-1</option>
-        <option>SQ7</option>
-    </select>
-    <br>
-    <br>
-    <button type="button">Generate Report</button>
-    <hr>
-    <h1>My Sample Harvest Report</h1>
+
+    <div id="rpTitle" v-cloak>
+        <label for="title">Title:</label>
+        <input type="text" id="title" name="title" v-model="title"/>
+        <br>
+        <br>
+        <label for="start-date">Start:</label>
+        <input type="date" id="start-date" name="start-date"  value="2020-05-05" min="2014-01-01" max="2022-01-01" />
+        <label for="end-date">End:</label>
+        <input type="date" id="end-date" name="end-date" value="2020-05-15" min="2020-05-05" max="2022-01-01"/>
+        <br>
+        <br>
+        <label for="crop">Crop:</label>
+        <select id="crop" name="crop">
+            <option>Broccoli</option>
+            <option selected>Kale</option>
+            <option>Peas</option>
+        </select>
+        <label for="field">Area:</label>
+        <select id="field" name="field">
+            <option selected>All</option>
+            <option>Chuau-1</option>
+            <option>SQ7</option>
+        </select>
+        <br>
+        <br>
+        <button type="button">Generate Report</button>
+        <hr>
+
+        <h1>{{ title }}</h1>
+    </div>
     <p>Details:</p>
     <ul>
         <li><strong>Farm</strong>:Sample Farm</li>
@@ -70,5 +71,14 @@
             <td>Bunches</td>
         </tr>
     </table>
+
+    <script>
+        var reportTitle = new Vue ({
+            el: "#rpTitle",
+            data: {
+                title: "My Sample Harvest Report",
+            },
+        });
+    </script>
 </body>
 </html>
