--- a/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
@@ -9,33 +9,29 @@
     <h1>Harvest Report</h1>
       <p>This page is a <i>mockup</i> of a simplified harvest report.</p>
       <label for="title">Title</label>
-      <div id='title' v-cloak>
+      <div id="title" v-cloak>
         <input type="text" v-model="reportTitle">
         <br>
         <br>
         <form>
           <label>
             Start:
-            <input type="date" 
-            name="start-date" 
+            <input type="date" v-model="reportStartDate" 
             min="2014-01-01" 
-            max="2022-01-01"
-            value="2020-05-05">
+            max="2022-01-01">
           </label>
           <label>
             End:
-            <input type="date" 
-            name="end-date" 
+            <input type="date" v-model="reportEndDate"
             min="2020-05-05" 
-            max="2022-01-01"
-            value="2020-05-15">
+            max="2022-01-01">
           </label>
         </form>
         <br>
         <label for="crop">Crop</label>
-        <select id="crop" name="crop">
+        <select id="crop" v-model="reportCrop">
           <option>Broccoli</option>
-          <option selected>Kale</option>
+          <option>Kale</option>
           <option>Peas</option>
         </select>
         <label for="field">Area</label>
@@ -49,24 +45,15 @@
         <input type="button" value="Generate Report" />
     <hr>
       <h1>{{ reportTitle }}</h1>
-    </div>
-    <script>
-      var vueData = new Vue({
-          el:'#title',
-          data: {
-              reportTitle: 'My Sample Harvest Report'
-          }
-      });
-    </script>
         <p>Details:</p>
         <ul>
             <li><strong>Farm:</strong>Sample Farm</li>
             <li><strong>User:</strong>manager1</li>
             <li><strong>Language:</strong>English</li>
         <br>
-            <li><strong>Start:</strong>05/01/2018</li>
-            <li><strong>End:</strong>05/15/2018</li>
-            <li><strong>Crop:</strong>Kale</li>
+            <li><strong>Start:</strong>{{reportStartDate}}</li>
+            <li><strong>End:</strong>{{reportEndDate}}</li>
+            <li><strong>Crop:</strong>{{reportCrop}}</li>
         </ul>
         <table border=1>
             <tr>
@@ -91,5 +78,17 @@
                 <td>Bunches</td>
             </tr>
         </table>
+      </div>
+      <script>
+        var vueData = new Vue({
+            el:"#title",
+            data: {
+                reportTitle: "My Sample Harvest Report",
+                reportStartDate: "2020-05-05",
+                reportEndDate: "2020-05-15",
+                reportCrop: "Kale"
+            }
+        });
+      </script>    
   </body>
 </html>
