--- a/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
@@ -30,15 +30,11 @@
         <br>
         <label for="crop">Crop</label>
         <select id="crop" v-model="reportCrop">
-          <option>Broccoli</option>
-          <option>Kale</option>
-          <option>Peas</option>
+          <option v-for="crop in crops">{{crop}}</option>
         </select>
         <label for="field">Area</label>
         <select id="field" name="field">
-          <option selected>All</option>
-          <option>Chuau-1</option>
-          <option>SQ7</option>
+          <option v-for="area in areas">{{area}}</option>
         </select>
         <br>
         <br>
@@ -86,7 +82,17 @@
                 reportTitle: "My Sample Harvest Report",
                 reportStartDate: "2020-05-05",
                 reportEndDate: "2020-05-15",
-                reportCrop: "Kale"
+                reportCrop: "Kale",
+                crops: [
+                  "Broccoli",
+                  "Kale",
+                  "Peas",
+                ],
+                areas: [
+                  "All",
+                  "Chuau-1",
+                  "SQ7",
+                ]
             }
         });
       </script>    
