--- a/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
@@ -59,19 +59,12 @@
                 <th>Yield</th>
                 <th>Units</th>
             </tr>
-            <tr>
-                <td>05/02/2018</td>
-                <td>Chuau-01</td>
-                <td>Kale</td>
-                <td>10</td>
-                <td>Bunches</td>
-            </tr>
-            <tr>
-                <td>05/05/2018</td>
-                <td>SQ7</td>
-                <td>Kale</td>
-                <td>7</td>
-                <td>Bunches</td>
+            <tr v-for="t in table">
+                <td>{{t.date}}</td>
+                <td>{{t.area}}</td>
+                <td>{{t.crop}}</td>
+                <td>{{t.yield}}</td>
+                <td>{{t.units}}</td>
             </tr>
         </table>
       </div>
@@ -92,7 +85,10 @@
                   "All",
                   "Chuau-1",
                   "SQ7",
-                ]
+                ],
+                table: [
+                {date: "2018-05-02", area: "Chuau-1", crop: "Kale", yield: 10, units: "Bunches"},
+                {date: "2018-05-05", area: "SQ7", crop: "Kale", yield: 7, units: "Bunches"}],
             }
         });
       </script>    
