--- a/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
@@ -91,6 +91,7 @@
                 {date: "2018-05-05", area: "SQ7", crop: "Kale", yield: 7, units: "Bunches"}],
             }
         });
+        Vue.config.devtools = true; 
       </script>    
   </body>
 </html>
