--- a/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
@@ -7,19 +7,19 @@
     <h1>Harvest Report</h1>
     <p>This page is a <i>mockup</i> of a simplified harvest report.</p>
 
-    <div id="rpTitle" v-cloak>
+    <div id="report" v-cloak>
         <label for="title">Title:</label>
-        <input type="text" id="title" name="title" v-model="title"/>
+        <input type="text" id="title" name="title" v-model="reportTitle"/>
         <br>
         <br>
         <label for="start-date">Start:</label>
-        <input type="date" id="start-date" name="start-date"  value="2020-05-05" min="2014-01-01" max="2022-01-01" />
+        <input type="date" id="start-date" name="start-date" min="2014-01-01" max="2022-01-01" v-model="reportStartDate" />
         <label for="end-date">End:</label>
-        <input type="date" id="end-date" name="end-date" value="2020-05-15" min="2020-05-05" max="2022-01-01"/>
+        <input type="date" id="end-date" name="end-date" min="2020-05-05" max="2022-01-01" v-model="reportEndDate" />
         <br>
         <br>
         <label for="crop">Crop:</label>
-        <select id="crop" name="crop">
+        <select id="crop" name="crop" v-model="reportCrop">
             <option>Broccoli</option>
             <option selected>Kale</option>
             <option>Peas</option>
@@ -35,50 +35,55 @@
         <button type="button">Generate Report</button>
         <hr>
 
-        <h1>{{ title }}</h1>
-    </div>
-    <p>Details:</p>
-    <ul>
-        <li><strong>Farm</strong>:Sample Farm</li>
-        <li><strong>User</strong>:manager1</li>
-        <li><strong>Language</strong>:English</li>
+        <h1>{{ reportTitle }}</h1>
+
+        <p>Details:</p>
+        <ul>
+            <li><strong>Farm</strong>:Sample Farm</li>
+            <li><strong>User</strong>:manager1</li>
+            <li><strong>Language</strong>:English</li>
+            <br>
+            <li><strong>Start</strong>:{{ reportStartDate }}</li>
+            <li><strong>End</strong>:{{ reportEndDate }}</li>
+            <li><strong>Crop</strong>:{{ reportCrop }}</li>
+        </ul>
         <br>
-        <li><strong>Start</strong>:05/01/2018</li>
-        <li><strong>End</strong>:05/15/2018</li>
-        <li><strong>Crop</strong>:Kale</li>
-    </ul>
-    <br>
-    <table border="1">
-        <tr>
-            <th>Date</th>
-            <th>Area</th>
-            <th>Crop</th>
-            <th>Yield</th>
-            <th>Units</th>
-        </tr>
-        <tr>
-            <td>05/02/2018</td>
-            <td>Chuau-1</td>
-            <td>Kale</td>
-            <td>10</td>
-            <td>Bunches</td>
-        </tr>
-        <tr>
-            <td>05/05/2018</td>
-            <td>SQ7</td>
-            <td>Kale</td>
-            <td>7</td>
-            <td>Bunches</td>
-        </tr>
-    </table>
+        <table border="1">
+            <tr>
+                <th>Date</th>
+                <th>Area</th>
+                <th>Crop</th>
+                <th>Yield</th>
+                <th>Units</th>
+            </tr>
+            <tr>
+                <td>05/02/2018</td>
+                <td>Chuau-1</td>
+                <td>Kale</td>
+                <td>10</td>
+                <td>Bunches</td>
+            </tr>
+            <tr>
+                <td>05/05/2018</td>
+                <td>SQ7</td>
+                <td>Kale</td>
+                <td>7</td>
+                <td>Bunches</td>
+            </tr>
+        </table>
+    </div>
 
     <script>
-        var reportTitle = new Vue ({
-            el: "#rpTitle",
+        var report = new Vue ({
+            el: "#report",
             data: {
-                title: "My Sample Harvest Report",
+                reportTitle: "My Sample Harvest Report",
+                reportStartDate: "05/05/2020",
+                reportEndDate: "05/15/2020",
+                reportCrop: "Kale",
             },
         });
+
     </script>
 </body>
 </html>
