--- a/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
@@ -35,7 +35,7 @@
         <button type="button">Generate Report</button>
         <hr>
 
-        <h1>{{ reportTitle }}</h1>
+        <h1>{{ reportTitle ? reportTitle : "Mock Harvest Report" }}</h1>
 
         <p>Details:</p>
         <ul>
