--- a/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
@@ -1,70 +1,86 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="UTF-8">
+        <title>Vue sub tab</title>
+    </head>
+    <body>
+        <div id="report-title" v-cloak>
+            <input type="text" v-model="reportTitle">
+            <br>
+            <h1>Harvest Report</h1>
+            <p>This page is a <i>mockup</i> simplified harvest report</p>
+            <p>
+            <label for="title">Title:</label>
+            <input type="text" id="text" name="text" value="My Sample Harvest Report" />
+            </p>
+            <p>
+            <label for="start">Start:</label>
+            <input type="date" id="start" name="start-date" value="05/05/2020" min="01/01/2014" max="01/01/2022">
+            <label for="end">End:</label>
+            <input type="date" id="end" name="end-date" value="05/15/2020" min="05/05/2020" max="01/01/2022">
+            </p>
+            <p>
+            <label for="crop">Crop:</label>
+            <select id="crop" name="crop">
+                <option value="broccoli">Broccoli</option>
+                <option value="kale" selected>Kale</option>
+                <option value="peas">Peas</option>
+            </select>
 
-    <h1>Harvest Report</h1>
-    <p>This page is a <i>mockup</i> simplified harvest report</p>
-    <p>
-        <label for="title">Title:</label>
-        <input type="text" id="text" name="text" value="My Sample Harvest Report" />
-    </p>
-    <p>
-        <label for="start">Start:</label>
-        <input type="date" id="start" name="start-date" value="05/05/2020" min="01/01/2014" max="01/01/2022">
-        <label for="end">End:</label>
-        <input type="date" id="end" name="end-date" value="05/15/2020" min="05/05/2020" max="01/01/2022">
-    </p>
-    <p>
-        <label for="crop">Crop:</label>
-        <select id="crop" name="crop">
-            <option value="broccoli">Broccoli</option>
-            <option value="kale" selected>Kale</option>
-            <option value="peas">Peas</option>
-        </select>
-
-        <label for="area">Area:</label>
-        <select id="area" name="area">
-            <option value="all" selected>All</option>
-            <option value="Chuau-1">Chuau-1</option>
-            <option value="SQ7"></option>
-        </select>
-    </p>
-    <button id="generateButton">Generate Report</button>
-    <hr>
-    <h1>My Sample Harvest Report</h1>
-    <p>Details:</p>
-    <ul>
-        <li><strong>Farm:</strong>Sample Farm</li>
-        <li><strong>User:</strong>manager1</li>
-        <li><strong>Language:</strong>English</li>
-        <br>
-        <li><strong>Start:</strong>05/01/2018</li>
-        <li><strong>End:</strong>05/15/2018</li>
-        <li><strong>Crop:</strong> Kale</li>
-    </ul>
-    <table border="1">
-        <thead>
-            <th>Date</th>
-            <th>Area</th>
-            <th>Crop</th>
-            <th>Yield</th>
-            <th>Units</th>
-        </thead>
-        <tbody>
-            <tr>
-                <td>05/02/2018</td>
-                <td>Chuau-1</td>
-                <td>Kale</td>
-                <td>10</td>
-                <td>Bunches</td>
-            </tr>
-            <tr>
-                <td>05/05/2018</td>
-                <td>SQ7</td>
-                <td>Kale</td>
-                <td>7</td>
-                <td>Bunches</td>
-            </tr>
-        </tbody>
-    </table>
-
+            <label for="area">Area:</label>
+            <select id="area" name="area">
+                <option value="all" selected>All</option>
+                <option value="Chuau-1">Chuau-1</option>
+                <option value="SQ7"></option>
+            </select>
+            </p>
+            <button id="generateButton">Generate Report</button>
+            <hr>
+            <h1>{{reportTitle}}</h1>
+        </div>
+        <script>
+            var vueDate = new Vue({
+                el:'#report-title',
+                data: {
+                    reportTitle: 'My Sample Harvest Report'
+                }
+            });
+        </script>
+        <p>Details:</p>
+        <ul>
+           <li><strong>Farm:</strong>Sample Farm</li>
+           <li><strong>User:</strong>manager1</li>
+           <li><strong>Language:</strong>English</li>
+            <br>
+            <li><strong>Start:</strong>05/01/2018</li>
+            <li><strong>End:</strong>05/15/2018</li>
+            <li><strong>Crop:</strong> Kale</li>
+        </ul>
+        <table border="1">
+           <thead>
+                <th>Date</th>
+                <th>Area</th>
+                <th>Crop</th>
+                <th>Yield</th>
+                <th>Units</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>05/02/2018</td>
+                    <td>Chuau-1</td>
+                    <td>Kale</td>
+                    <td>10</td>
+                    <td>Bunches</td>
+                </tr>
+                <tr>
+                    <td>05/05/2018</td>
+                    <td>SQ7</td>
+                    <td>Kale</td>
+                    <td>7</td>
+                    <td>Bunches</td>
+                </tr>
+            </tbody>
+        </table>
+    </body>
 </html>
