--- a/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
@@ -16,13 +16,13 @@
             </p>
             <p>
             <label for="start">Start:</label>
-            <input type="date" id="start" name="start-date" value="05/05/2020" min="01/01/2014" max="01/01/2022">
+            <input type="date" id="start" v-model="reportStartDate" value="05/05/2020" min="01/01/2014" max="01/01/2022">
             <label for="end">End:</label>
-            <input type="date" id="end" name="end-date" value="05/15/2020" min="05/05/2020" max="01/01/2022">
+            <input type="date" id="end" v-model="reportEndDate" value="05/15/2020" min="05/05/2020" max="01/01/2022">
             </p>
             <p>
             <label for="crop">Crop:</label>
-            <select id="crop" name="crop">
+            <select id="crop" v-model="reportCrop">
                 <option value="broccoli">Broccoli</option>
                 <option value="kale" selected>Kale</option>
                 <option value="peas">Peas</option>
@@ -37,26 +37,31 @@
             </p>
             <button id="generateButton">Generate Report</button>
             <hr>
+
             <h1>{{reportTitle}}</h1>
+
+            <p>Details:</p>
+            <ul>
+                <li><strong>Farm:</strong>Sample Farm</li>
+                <li><strong>User:</strong>manager1</li>
+                <li><strong>Language:</strong>English</li>
+                <br>
+                <li><strong>Start:</strong>{{reportStartDate}}</li>
+                <li><strong>End:</strong>{{reportEndDate}}</li>
+                <li><strong>Crop:</strong>{{reportCrop}}</li>
+            </ul>
         </div>
         <script>
             var vueDate = new Vue({
                 el:'#report-title',
                 data: {
-                    reportTitle: 'My Sample Harvest Report'
+                    reportTitle: 'My Sample Harvest Report',
+                    reportStartDate: '05/05/2020',
+                    reportEndDate: '05/15/2020',
+                    reportCrop: 'Kale'
                 }
             });
         </script>
-        <p>Details:</p>
-        <ul>
-           <li><strong>Farm:</strong>Sample Farm</li>
-           <li><strong>User:</strong>manager1</li>
-           <li><strong>Language:</strong>English</li>
-            <br>
-            <li><strong>Start:</strong>05/01/2018</li>
-            <li><strong>End:</strong>05/15/2018</li>
-            <li><strong>Crop:</strong> Kale</li>
-        </ul>
         <table border="1">
            <thead>
                 <th>Date</th>
