--- a/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
@@ -46,15 +46,33 @@
                 <li><strong>End:</strong>{{reportEndDate}}</li>
                 <li><strong>Crop:</strong>{{reportCrop}}</li>
             </ul>
+            <table border="1">
+                <thead>
+                     <th>Date</th>
+                     <th>Area</th>
+                     <th>Crop</th>
+                     <th>Yield</th>
+                     <th>Units</th>
+                 </thead>
+                 <tbody>
+                     <tr v-for="t in table">
+                         <td>{{t.date}}</td>
+                         <td>{{t.area}}</td>
+                         <td>{{t.crop}}</td>
+                         <td>{{t.yield}}</td>
+                         <td>{{t.units}}</td>
+                     </tr>
+                 </tbody>
+             </table>
         </div>
-        
+
         <script>
             var vueDate = new Vue({
                 el:'#report-title',
                 data: {
                     reportTitle: 'My Sample Harvest Report',
-                    reportStartDate: '05/05/2020',
-                    reportEndDate: '05/15/2020',
+                    reportStartDate: '2020-05-05',
+                    reportEndDate: '2020-05-15',
                     reportCrop: 'Kale',
                     crops: [
                         "Broccoli",
@@ -65,35 +83,14 @@
                         "All",
                         "Chuau-1",
                         "SQ7"
+                    ],
+                    table: [
+                        {date: "2018-05-02", area:"Chuau-1", crop:"Kale", yield: 10, units: "Bunches"},
+                        {date: "2018-05-22", area:"SQ7", crop:"Peas", yield: 5, units: "Bunches"},
                     ]
                 }
             });
         </script>
-
-        <table border="1">
-           <thead>
-                <th>Date</th>
-                <th>Area</th>
-                <th>Crop</th>
-                <th>Yield</th>
-                <th>Units</th>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>05/02/2018</td>
-                    <td>Chuau-1</td>
-                    <td>Kale</td>
-                    <td>10</td>
-                    <td>Bunches</td>
-                </tr>
-                <tr>
-                    <td>05/05/2018</td>
-                    <td>SQ7</td>
-                    <td>Kale</td>
-                    <td>7</td>
-                    <td>Bunches</td>
-                </tr>
-            </tbody>
-        </table>
+        
     </body>
 </html>
