--- a/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
@@ -90,6 +90,7 @@
                     ]
                 }
             });
+            Vue.config.devtools = true;
         </script>
         
     </body>
