--- a/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
@@ -1,8 +1,9 @@
 <h1> Harvest Report </h1>
 <p> This page is a <i>mockup</i> of a simplified harvest report.</p>
 
+<div id="report-title" v-cloak>
 <label for="title">Title:</label>
-<input type="text" id="title" name="title" placeholder="title">
+<input type="text" id="title" name="title" v-model="reportTitleHeader">
 <br/>
 
 <label for="start">Start:</label>
@@ -29,19 +30,9 @@
 <button type="button">Generate Report</button>
 <hr/>
 
-<div id="report-title" v-cloak>
-    <h1>{{header}}</h1>
-    <input type="text" v-model="header">
-</div>
 
-<script>
-    var reportTitle = new Vue({
-        el: '#report-title',
-        data: {
-            header: 'My Sample Harvest Report'
-        }
-    })
-</script>
+<h1>{{ reportTitleHeader }}</h1>
+</div>
 
 <p>Details: </p>
 <ul>
@@ -77,3 +68,12 @@
         <td>Bunches</td>
     </tr>
 </table>
+
+<script>
+    var reportTitle = new Vue({
+        el: '#report-title',
+        data: {
+            reportTitleHeader: 'My Sample Harvest Report'
+        }
+    })
+</script>
