--- a/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
@@ -15,16 +15,12 @@
 
         <label for="crop">Crop:</label>
         <select id="crop" name="crop" v-model="reportCrop">
-            <option>Broccoli</option>
-            <option selected>Kale</option>
-            <option>Peas</option>
+            <option v-for="crop in reportCrops"> {{crop}} </option>
         </select>
 
         <label for="field">Area:</label>
-        <select id="field" name="field">
-            <option selected>All</option>
-            <option>Chuau-1</option>
-            <option>SQ7</option>
+        <select id="field" name="field" v-model="reportField">
+            <option v-for="field in reportFields"> {{field}} </option>
         </select>
         <br/>
 
@@ -77,7 +73,18 @@
                 reportTitle: 'My Sample Harvest Report',
                 reportStartDate: '2020-05-05',
                 reportEndDate: '2020-05-15',
-                reportCrop: 'Kale'
+                reportCrop: 'Kale',
+                reportCrops: [
+                    'Broccoli',
+                    'Kale',
+                    'Peas'
+                ],
+                reportField: 'All',
+                reportFields: [
+                    'All',
+                    'Chuau-1',
+                    'SQ7'
+                ]
             }
         })
     </script>
