--- a/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
@@ -49,20 +49,7 @@
                 <th>Yield</th>
                 <th>Units</th>
             </tr>
-            <tr>
-                <td>05/02/2018</td>
-                <td>Chuau-1</td>
-                <td>Kale</td>
-                <td>10</td>
-                <td>Bunches</td>
-            </tr>
-            <tr>
-                <td>05/05/2018</td>
-                <td>SQ7</td>
-                <td>Kale</td>
-                <td>7</td>
-                <td>Bunches</td>
-            </tr>
+            <tr v-for="logs in reportHarvestLogs"> <td v-for="item in logs">{{item}}</td></tr>
         </table>
     </div>
     
@@ -84,6 +71,10 @@
                     'All',
                     'Chuau-1',
                     'SQ7'
+                ],
+                reportHarvestLogs: [
+                    {data: '05/02/2018', area: 'Chuau-1', crop: 'Kale', yield: 10, units: 'Bunches'},
+                    {data: '05/05/2018', area: 'SQ7', crop: 'Kale', yield: 7, units: 'Bunches'}
                 ]
             }
         })
