--- a/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
+++ b/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
@@ -1,5 +1,7 @@
 <html>
     <hr>
+    <label for="tile">Title:</label>
+    <input type="text" id="'title" name="title"/>
     <body>
         <h1>
             Harvest Report
@@ -21,12 +23,13 @@
                     <li><strong>Farm</strong>:Sample Farm</li>
                     <li><strong>User</strong>:manager1</li>
                     <li><strong>Language</strong>:English</li> <br>
-                    <li><strong>Start</strong>:05/01/2018</li><br>
-                    <li><strong>End</strong>05/15/2018</li><br>
-                    <li><strong>Crop</strong>Kale</li><br>
+                    <li><strong>Start</strong>:05/01/2018</li>
+                    <li><strong>End</strong>05/15/2018</li>
+                    <li><strong>Crop</strong>Kale</li>
                 </ul>
             </dd>
         </p>
     </body>
+    <input type="button" value="Generate Report"/>
     <hr>
 </html>
