--- a/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
+++ b/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
@@ -20,12 +20,18 @@
             Detail:
             <dd>
                 <ul>
-                    <li><strong>Farm</strong>:Sample Farm</li>
-                    <li><strong>User</strong>:manager1</li>
-                    <li><strong>Language</strong>:English</li> <br>
-                    <li><strong>Start</strong>:05/01/2018</li>
-                    <li><strong>End</strong>05/15/2018</li>
-                    <li><strong>Crop</strong>Kale</li>
+                    <li><strong>Farm:</strong>Sample Farm</li>
+                    <li><strong>User:</strong>manager1</li>
+                    <li><strong>Language:</strong>English</li> <br>
+                    <li><strong>Start:</strong>05/01/2018</li>
+                    <li><strong>End:</strong>05/15/2018</li>
+                    <li><label for="crop"><strong>Crop:</strong></label></strong>
+                        <select id="crops" name="crops" >
+                                <option>Broccoli</option>
+                                <option selected>Kale</option>
+                                <option>Peas</option>
+                        </select>
+                    </li>
                 </ul>
             </dd>
         </p>
