--- a/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
+++ b/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
@@ -23,17 +23,23 @@
                     <li><strong>Farm:</strong>Sample Farm</li>
                     <li><strong>User:</strong>manager1</li>
                     <li><strong>Language:</strong>English</li> <br>
-                    <li><strong>Start:</strong>05/01/2018</li>
-                    <li><strong>End:</strong>05/15/2018</li>
+
+
+                    <li><label for="start"><strong>Start:</strong></label>
+                        <input type="date" id="start" name="date-start" value="2020-05-05" min="2014-01-01" max="2022-01-01"/>
+                    </li>
+                    <li><label for="end"><strong>End:</strong></label>
+                        <input type="date" id="end" name="date-end" value="2020-05-15" min="2020-05-05" max="2022-01-01"/>
+                    </li>
                     <li><label for="crop"><strong>Crop:</strong></label>
-                        <select id="crops" name="crops" >
+                        <select id="crop" name="crops" >
                                 <option>Broccoli</option>
                                 <option selected>Kale</option>
                                 <option>Peas</option>
                         </select>
                     </li>
                     <li><label for="area"><strong>Area:</strong></label>
-                        <select id="fields" name="fields">
+                        <select id="area" name="fields">
                             <option selected>All</option>
                             <option>Chuau-1</option>
                             <option>SQ7</option>
